[package]
name = "xmodem"
version = "0.3.0"
authors = ["Allen Welkie <allen.welkie@gmail.com>",
    "Oxide Computer Co. <https://oxide.computer/>"]
keywords = ["xmodem", "serial", "no_std"]
repository = "https://github.com/oxidecomputer/xmodem.rs"
license = "MIT"
description = "An implementation of the XMODEM file-transfer protocol."
edition = "2018"

[dependencies]
log = { version = "^0.4", default-features = false }
crc16 = "^0.4"
embedded-hal = { version = "0.2", optional = true }
nb = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "^3.2"
rand = "^0.8"

[features]
default = ["std"]
std = []
embedded_hal = ["embedded-hal", "nb"]
